// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 1`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "@listener(1)-2": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@selector(common-name)-1": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "3": {
    "className": "AtomInstance",
    "observers": {
      "@listener(3)-3": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@selector(common-name)-1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "@listener(1)-2": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "1": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "@listener(3)-3": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "3": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "@selector(common-name)-1": {
    "className": "SelectorInstance",
    "observers": {
      "1": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
      "3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 2,
  },
  "root": {
    "className": "AtomInstance",
    "observers": {
      "@selector(common-name)-1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 1,
    "status": "Active",
    "weight": 1,
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 2`] = `
{
  "2": {
    "className": "AtomInstance",
    "observers": {
      "@listener(2)-5": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@selector(common-name)-4": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 4,
    "status": "Active",
    "weight": 3,
  },
  "@listener(2)-5": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "2": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "@selector(common-name)-4": {
    "className": "SelectorInstance",
    "observers": {
      "2": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 4,
    "status": "Active",
    "weight": 2,
  },
  "root": {
    "className": "AtomInstance",
    "observers": {
      "@selector(common-name)-4": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 1,
    "status": "Active",
    "weight": 1,
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 3`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "@listener(1)-6": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@selector(common-name)-1": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "2": {
    "className": "AtomInstance",
    "observers": {
      "@listener(2)-5": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@selector(common-name)-4": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 4,
    "status": "Active",
    "weight": 3,
  },
  "3": {
    "className": "AtomInstance",
    "observers": {
      "@listener(3)-7": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@selector(common-name)-1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "@listener(1)-6": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "1": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "@listener(2)-5": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "2": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "@listener(3)-7": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "3": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "@selector(common-name)-1": {
    "className": "SelectorInstance",
    "observers": {
      "1": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
      "3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 2,
  },
  "@selector(common-name)-4": {
    "className": "SelectorInstance",
    "observers": {
      "2": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 4,
    "status": "Active",
    "weight": 2,
  },
  "root": {
    "className": "AtomInstance",
    "observers": {
      "@selector(common-name)-1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
      "@selector(common-name)-4": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 1,
    "status": "Active",
    "weight": 1,
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 4`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "@listener(1)-6": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@selector(common-name)-1": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "3": {
    "className": "AtomInstance",
    "observers": {
      "@listener(3)-7": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@selector(common-name)-1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "@listener(1)-6": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "1": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "@listener(3)-7": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "3": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "@selector(common-name)-1": {
    "className": "SelectorInstance",
    "observers": {
      "1": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
      "3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 2,
  },
  "root": {
    "className": "AtomInstance",
    "observers": {
      "@selector(common-name)-1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 1,
    "status": "Active",
    "weight": 1,
  },
}
`;
